# fastapi

./: LICENSE  README.md  compose.yaml
app/: .dockerignore  __init__.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
app/cli/: goodbye.py  hello.py  main.py
app/config/: config.py  log.ini  service.py  ssl.conf
app/interfaces/: rest.py  sse.py  websockets.py
app/migrations/: env.py
app/migrations/versions/: ecb20a40c630_init.py
app/scripts/: healthcheck.sh  startup.sh
app/tests/: conftest.py
app/tests/api/: test_api.py  test_sse.py  test_websocket.py
app/tests/cli/: test_goodbye_cli.py  test_hello_cli.py
app/tests/interfaces/: test_rest.py  test_websocket.py
app/utilities/: db.py  dependencies.py  utils.py
devops/docker/: Dockerfile
