[project]
name = "Boilerplate"
version = "0.1.0"
description = "FastAPI project with SQLModel, Alembic, and Async Postgres"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-guard>=4.2.2",
    "fastapi[standard]>=0.135.1",
    "greenlet>=3.3.2",
    "json-log-formatter>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "redis>=7.2.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlmodel>=0.0.37",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
